[package]
name = "rocket_app"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2", features = ["sqlite"] }
tasks_db_lib = { path = "../tasks_db_lib" } # Our Diesel-based library crate
dotenvy = "0.15"
anyhow = "1"
